fix footer alignment

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -9,6 +9,8 @@ $fourth-color: #002366;
 $links-color: #4f5361;
 $top-background: #e6f0ff;
 $secondary-background: #e5e5e5;
+$small-links-color: #7A7A7E;
+$ultra-small-color: #C2C2C2;
 //fonts
 $main-font: "Poppins";
 $secondary-font: "Lato";
